--- a/Day_02/Homework/Table_Form.html
+++ b/Day_02/Homework/Table_Form.html
@@ -28,13 +28,13 @@
           <tr>
             <td>Password</td>
             <td>
-              <input type="text" placeholder="Nhập mật khẩu" size="30" />
+              <input type="password" placeholder="Nhập mật khẩu" size="30" />
             </td>
           </tr>
           <tr>
             <td>Nhập lại Passsword</td>
             <td>
-              <input type="text" placeholder="Nhập lại mật khẩu" size="30" />
+              <input type="password" placeholder="Nhập lại mật khẩu" size="30" />
             </td>
           </tr>
           <tr>
