--- a/day_18/homework/ul-li/index.html
+++ b/day_18/homework/ul-li/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>Document</title>
   </head>
   <body>
-    <input type="text" placeholder="Enter username" id="username" />
-    <input type="password" placeholder="Enter password" id="password" />
-    <button id="btn-login">Login</button>
+    <ul id="list">
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+      <li>Item 4</li>
+      <li>Item 5</li>
+      <li>Item 6</li>
+      <li>Item 7</li>
+    </ul>
 
     <script src="./main.js"></script>
   </body>
